--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -95,4 +95,4 @@ jobs:
           curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
           install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
           rm argocd-linux-amd64        
-          argocd cluster rm k3d-teste-central-obs-overview --server argocd.apr.vee.codes --auth-token ${{ secrets.ARGOCD_TOKEN }}
+          argocd cluster rm -y k3d-teste-central-obs-overview --server argocd.apr.vee.codes --auth-token ${{ secrets.ARGOCD_TOKEN }}
